# grillex

./: .coveragerc  .dockerignore  .env.example  .gitignore  AUTHORS.rst  CLAUDE.md  CMakeLists.txt  CONTRIBUTING.rst  LICENSE.txt  MANIFEST.in  Makefile  README.rst  docker-compose.dev.yml  docker-compose.mcp.yml  docker-compose.prod.yml  docker-compose.yml  grillex-webapp-requirements.md  grillex_requirements.md  implementation_plan.md  pyproject.toml  setup.cfg  setup.py
.claude/: settings.json
.github/workflows/: build-wheels.yml  ci.yml  docker.yml  docs.yml
cpp/: CMakeLists.txt
cpp/bindings/: bindings.cpp
cpp/include/grillex/: assembler.hpp  beam_element.hpp  boundary_condition.hpp  constraints.hpp  dof_handler.hpp  eigenvalue_solver.hpp  errors.hpp  internal_actions.hpp  internal_actions_computer.hpp  load_case.hpp  local_axes.hpp  material.hpp  model.hpp  node.hpp  node_registry.hpp  nonlinear_solver.hpp  placeholder.hpp  plate_element.hpp  plate_element_8.hpp  plate_element_9.hpp  plate_element_tri.hpp  point_mass.hpp  section.hpp  singularity_diagnostics.hpp  solver.hpp  spring_element.hpp  warnings.hpp
cpp/src/: assembler.cpp  beam_element.cpp  boundary_condition.cpp  constraints.cpp  dof_handler.cpp  eigenvalue_solver.cpp  internal_actions_axial.cpp  internal_actions_bending_euler.cpp  internal_actions_bending_timoshenko.cpp  internal_actions_deflection_euler.cpp  internal_actions_warping.cpp  load_case.cpp  local_axes.cpp  material.cpp  model.cpp  node.cpp  node_registry.cpp  nonlinear_solver.cpp  placeholder.cpp  plate_element.cpp  plate_element_8.cpp  plate_element_9.cpp  plate_element_tri.cpp  point_mass.cpp  section.cpp  singularity_diagnostics.cpp  solver.cpp  spring_element.cpp
deployment/pypi/: README.md  docker-compose.yml
docs/: conf.py  errors.rst  index.rst  internal_actions.rst
docs/user/: analysis_workflow.rst  beam_basics.rst  coordinate_systems.rst  eigenvalue_analysis.rst  getting_started.rst  index.rst  loads_and_boundary_conditions.rst  nonlinear_springs.rst  plate_meshing.rst  results_and_postprocessing.rst
docs/verification/: cantilever_beam.rst  continuous_beam.rst  index.rst  simply_supported_beam.rst  verification_summary.rst  warping_torsion.rst
examples/: internal_actions_example.py
grillex-webapp/wheels/: grillex-0.0.0.dev0+g0f04f40-cp311-cp311-linux_x86_64.whl
implementation_plan/: acceptance_criteria_overview.md  add_line_load_load_case_support.md  beam_line_diagrams.md  implementation_plan.md  implementation_plan_overview.md  implementation_plan_phase00.md  implementation_plan_phase01.md  implementation_plan_phase02.md  implementation_plan_phase03.md  implementation_plan_phase04.md  implementation_plan_phase05.md  implementation_plan_phase06.md  implementation_plan_phase07.md  implementation_plan_phase07_task72.md  implementation_plan_phase08.md  implementation_plan_phase09.md  implementation_plan_phase10.md  implementation_plan_phase11.md  implementation_plan_phase12.md  implementation_plan_phase13.md  implementation_plan_phase14.md  implementation_plan_phase15.md  implementation_plan_phase16_eigenvalue.md  implementation_plan_phase17.md  implementation_plan_phase17_reporting.md  implementation_plan_phase18.md  implementation_plan_phase19.md  implementation_plan_phase19_plate_meshing.md  implementation_plan_phase20_vessel_motions.md  implementation_plan_phase21_vessel_geometry.md  implementation_plan_phase22_vessel_profiles.md  implementation_plan_phase23_vessel_panels.md  implementation_plan_phase24_vessel_io.md  implementation_plan_phase25_vessel_fem.md  implementation_plan_phase26_dnv_os_c101.md  implementation_plan_phase27_vessel_database.md  phase10_extension_plan.md  sectionbuilder_integration_plan.md
mcp/: Dockerfile  README.md
nginx/: nginx.prod.conf
nginx/conf.d/: default.conf
notebooks/: WarpingLine.ipynb  warping_equation.txt
scripts/: build-linux-wheel.sh
src/grillex/: _grillex_cpp.pyi  skeleton.py
src/grillex/core/: __init__.py  cargo.py  data_types.py  element_types.py  model_wrapper.py  plate.py  vessel_motion.py
src/grillex/design_codes/: __init__.py  base.py  eurocode3.py
src/grillex/io/: __init__.py  result_writer.py  yaml_loader.py
tests/: TEST_OVERVIEW.md  conftest.py  test_skeleton.py
tests/benchmarks/: __init__.py  test_phase13_validation.py
tests/cpp/: CMakeLists.txt  test_boundary_conditions.cpp  test_constraints.cpp  test_eigenvalue_solver.cpp  test_internal_actions.cpp  test_singularity_diagnostics.cpp  test_warping.cpp
tests/python/: test_basic_imports.py  test_beam_factory.py  test_crud_operations.py  test_element_types.py  test_gmsh_opengl.py  test_phase10_design_codes.py  test_phase11_error_handling.py  test_phase11_singularity_diagnostics.py  test_phase12_llm_tooling.py  test_phase15_nonlinear_springs.py  test_phase16_eigenvalue.py  test_phase19_beam_to_plate.py  test_phase19_plate_meshing.py  test_phase1_data_structures.py  test_phase20_vessel_motions.py  test_phase2_beam_element.py  test_phase3_assembler.py  test_phase3_boundary_conditions.py  test_phase3_dof_handler.py  test_phase3_model.py  test_phase3_solver.py  test_phase4_beam_subdivision.py  test_phase4_json_export.py  test_phase4_python_wrapper.py  test_phase4_yaml_loader.py  test_phase5_acceleration_loads.py  test_phase5_line_loads.py  test_phase5_load_combinations.py  test_phase6_constraints.py  test_phase7_check_locations.py  test_phase7_displacement_multielem.py  test_phase7_distributed_load_query.py  test_phase7_end_forces.py  test_phase7_internal_actions.py  test_phase7_python_bindings.py  test_phase8_additional_elements.py  test_phase9_cargo.py  test_plate_element_tri.py  test_plate_elements_higher_order.py  test_sections_integration.py  (+5 more)
tests/test_data/: invalid_missing_material.yaml  multi_span_beam.yaml  simple_cantilever.yaml
webapp/backend/: Dockerfile  Dockerfile.decoupled  Dockerfile.dev  __init__.py  config.py  main.py  requirements.txt
webapp/frontend/: .dockerignore  .gitignore  Dockerfile  Dockerfile.dev  index.html  nginx.conf  package-lock.json  package.json
(+68 files in other folders)
