[build-system]
requires = [
    "setuptools>=61.0",
    "setuptools_scm[toml]>=5",
    "wheel",
    "cmake>=3.20",
    "pybind11>=2.13",
]
build-backend = "setuptools.build_meta"

[tool.setuptools_scm]
# For smarter version schemes and other configuration options,
# check out https://github.com/pypa/setuptools_scm
version_scheme = "no-guess-dev"

# =============================================================================
# cibuildwheel configuration for multi-platform wheel building
# =============================================================================

[tool.cibuildwheel]
# Build for CPython 3.11, 3.12, 3.13
build = "cp311-* cp312-* cp313-*"

# Skip builds we don't support
skip = [
    "*-musllinux_*",      # Skip musl Linux (Alpine) - Eigen issues
    "pp*",                 # Skip PyPy
    "*-win32",             # Skip 32-bit Windows
    "*_i686",              # Skip 32-bit Linux
]

# Test each wheel after building
test-requires = ["pytest", "numpy", "scipy"]
test-command = "python -c \"import grillex; from grillex.core import StructuralModel; print('Wheel test passed')\""

# Build in isolated environment
build-verbosity = 1

[tool.cibuildwheel.linux]
# Build only for x86_64 architecture (not aarch64)
archs = ["x86_64"]

# Install pybind11 via pip (provides CMake config, avoids FetchContent issues)
before-build = "pip install pybind11"

# Use manylinux2014 for broader compatibility
manylinux-x86_64-image = "manylinux2014"

# Repair wheels to include shared libraries
repair-wheel-command = "auditwheel repair -w {dest_dir} {wheel}"

[tool.cibuildwheel.macos]
# Install Eigen via Homebrew
before-all = "brew install eigen"

# Install pybind11 via pip (provides CMake config)
before-build = "pip install pybind11"

# Build only for the native architecture (macos-14 is ARM)
archs = ["arm64"]

# Set deployment target for compatibility
environment = { MACOSX_DEPLOYMENT_TARGET = "11.0" }

[tool.cibuildwheel.windows]
# Build only for AMD64 architecture (not ARM64)
archs = ["AMD64"]

# Install pybind11 and delvewheel
before-build = "pip install pybind11 delvewheel"
repair-wheel-command = "delvewheel repair -w {dest_dir} {wheel}"

# Eigen is fetched via CMake FetchContent, no pre-install needed
environment = { CMAKE_GENERATOR = "Visual Studio 17 2022" }

# =============================================================================
# Project metadata (PEP 621)
# =============================================================================

[project]
name = "grillex"
dynamic = ["version"]
description = "Structural analysis & design platform with C++ FE core, Python front-end, and LLM/agent control"
readme = "README.rst"
license = {text = "MIT"}
authors = [
    {name = "Jim Zwartveld", email = "jzwartveld@hes-heerema.com"}
]
requires-python = ">=3.11"
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: C++",
    "Topic :: Scientific/Engineering",
]
dependencies = [
    "numpy>=1.24.0",
    "scipy>=1.10.0",
    "pyyaml>=6.0",
    "pydantic>=2.0",
]

[project.optional-dependencies]
meshing = ["gmsh>=4.11.0"]
testing = ["pytest", "pytest-cov", "setuptools"]
dev = ["black", "ruff", "mypy"]
mcp = ["mcp>=1.0.0"]
all = ["grillex[meshing,testing,dev,mcp]"]

[project.urls]
Homepage = "https://github.com/JimZwartveld/grillex"
Documentation = "https://grillex.readthedocs.io"
Repository = "https://github.com/JimZwartveld/grillex"
Issues = "https://github.com/JimZwartveld/grillex/issues"

[project.scripts]
grillex-mcp = "grillex.mcp.server:main"
